--- a/src/app/publications/page.module.scss
+++ b/src/app/publications/page.module.scss
@@ -30,3 +30,20 @@
     }
   }
 }
+
+.album{
+  height: 165px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__image{
+    width: 133px;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    img{
+      aspect-ratio: 1;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+}
