--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -2,7 +2,7 @@
   font-size: 16px;
   padding: 6px 5px;
   border: 1px solid var(--color-background-soft);
-  background: var(--color-background);
+  background: var(--color-background-soft);
   //background: var(--color-background-soft);
   border-radius: 0.25rem;
   outline: none;
