--- a/src/components/track/trackInfo/TrackInfo.module.scss
+++ b/src/components/track/trackInfo/TrackInfo.module.scss
@@ -5,7 +5,7 @@
   color: var(--color-text);
   gap: 0.5rem;
   &__img {
-    width: 50px;
+    min-width: 50px;
     height: 50px;
     position: relative;
     overflow: hidden;
