--- a/src/components/UI/horizontalCarusel/HorizontalCarusel.module.scss
+++ b/src/components/UI/horizontalCarusel/HorizontalCarusel.module.scss
@@ -1,3 +1,10 @@
+.wrapper{
+  overflow: hidden;
+  position: relative;
+  &:hover .root__btn {
+    opacity: 0.6;
+  }
+}
 .root{
   display: flex;
   gap: 0.5rem;
@@ -6,5 +13,35 @@
   scroll-snap-type: x mandatory;
   &::-webkit-scrollbar{
     display: none;
+  }
+  &__btn{
+    display: none;
+    @media screen and (min-width: 640px){
+      display: flex;
+      opacity: 0;
+      position: absolute;
+      top: calc(50% - 15px);
+      height: 30px;
+      width: 30px;
+      background: var(--color-background-soft);
+      cursor: pointer;
+      border-radius: 50%;
+      z-index: 10;
+      justify-content: center;
+      align-items: center;
+      -webkit-box-shadow: 0 0 10px -4px rgba(0,0,0,1);
+      -moz-box-shadow: 0 0 10px -4px rgba(0,0,0,1);
+      box-shadow: 0 0 10px -4px rgba(0,0,0,1);
+      transition: opacity 0.2s ease;
+      &:hover {
+        opacity: 1 !important;
+      }
+    }
+  }
+  &__btnRight{
+    right: 0.25rem;
+  }
+  &__btnLeft{
+    left: 0.25rem;
   }
 }
