--- a/src/components/track/trackProgress/trackProgress.module.scss
+++ b/src/components/track/trackProgress/trackProgress.module.scss
@@ -16,14 +16,14 @@
     height: 4px;
     cursor: pointer;
     animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
     background: #a9bfc7;
     border-radius: 20px;
-    border: 0px solid #000000;
+    border: 0 solid #000000;
   }
   input[type=range]::-webkit-slider-thumb {
-    box-shadow: 0px 0px 1px #000000;
-    border: 0px solid #000000;
+    box-shadow: 0 0 1px #000000;
+    border: 0 solid #000000;
     height: 16px;
     width: 16px;
     border-radius: 12px;
@@ -40,14 +40,14 @@
     height: 4px;
     cursor: pointer;
     animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
     background: #a9bfc7;
     border-radius: 20px;
-    border: 0px solid #000000;
+    border: 0 solid #000000;
   }
   input[type=range]::-moz-range-thumb {
-    box-shadow: 0px 0px 1px #000000;
-    border: 0px solid #000000;
+    box-shadow: 0 0 1px #000000;
+    border: 0 solid #000000;
     height: 16px;
     width: 16px;
     border-radius: 12px;
@@ -65,19 +65,19 @@
   }
   input[type=range]::-ms-fill-lower {
     background: #a9bfc7;
-    border: 0px solid #000000;
+    border: 0 solid #000000;
     border-radius: 40px;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
   }
   input[type=range]::-ms-fill-upper {
     background: #a9bfc7;
-    border: 0px solid #000000;
+    border: 0 solid #000000;
     border-radius: 40px;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
   }
   input[type=range]::-ms-thumb {
-    box-shadow: 0px 0px 1px #000000;
-    border: 0px solid #000000;
+    box-shadow: 0 0 1px #000000;
+    border: 0 solid #000000;
     height: 16px;
     width: 16px;
     border-radius: 12px;
