--- a/src/components/volumeRange/volumeRange.module.scss
+++ b/src/components/volumeRange/volumeRange.module.scss
@@ -1,97 +1,97 @@
 .root {
-  &__range{
-    //input{
-    //  width: 100%;
-    //}
-    input[type=range] {
-      height: 6px;
-      -webkit-appearance: none;
-      margin: 10px 0;
-      width: 100%;
-    }
-    input[type=range]:focus {
-      outline: none;
-    }
-    input[type=range]::-webkit-slider-runnable-track {
-      width: 100%;
-      height: 10px;
-      cursor: pointer;
-      animate: 0.2s;
-      box-shadow: 0 0 0 #000000;
-      background: #d6d8d1;
-      border-radius: 13px;
-      border: 2px solid #bbbbbb;
-    }
-    input[type=range]::-webkit-slider-thumb {
-      box-shadow: 0 0 0 #ffffff;
-      border: 3px solid #b0b0b0;
-      height: 40px;
-      width: 40px;
-      border-radius: 27px;
-      background: #e3e3e3;
-      cursor: pointer;
-      -webkit-appearance: none;
-      margin-top: -16px;
-    }
-    input[type=range]:focus::-webkit-slider-runnable-track {
-      background: #d6d8d1;
-    }
-    input[type=range]::-moz-range-track {
-      width: 100%;
-      height: 10px;
-      cursor: pointer;
-      animate: 0.2s;
-      box-shadow: 0px 0px 0px #000000;
-      background: #d6d8d1;
-      border-radius: 13px;
-      border: 2px solid #bbbbbb;
-    }
-    input[type=range]::-moz-range-thumb {
-      box-shadow: 0px 0px 0px #ffffff;
-      border: 3px solid #b0b0b0;
-      height: 28px;
-      width: 28px;
-      border-radius: 27px;
-      background: #e3e3e3;
-      cursor: pointer;
-    }
-    input[type=range]::-ms-track {
-      width: 100%;
-      height: 10px;
-      cursor: pointer;
-      animate: 0.2s;
-      background: transparent;
-      border-color: transparent;
-      color: transparent;
-    }
-    input[type=range]::-ms-fill-lower {
-      background: #d6d8d1;
-      border: 2px solid #bbbbbb;
-      border-radius: 27px;
-      box-shadow: 0px 0px 0px #000000;
-    }
-    input[type=range]::-ms-fill-upper {
-      background: #d6d8d1;
-      border: 2px solid #bbbbbb;
-      border-radius: 27px;
-      box-shadow: 0px 0px 0px #000000;
-    }
-    input[type=range]::-ms-thumb {
-      margin-top: 1px;
-      box-shadow: 0px 0px 0px #ffffff;
-      border: 3px solid #b0b0b0;
-      height: 28px;
-      width: 28px;
-      border-radius: 27px;
-      background: #e3e3e3;
-      cursor: pointer;
-    }
-    input[type=range]:focus::-ms-fill-lower {
-      background: #d6d8d1;
-    }
-    input[type=range]:focus::-ms-fill-upper {
-      background: #d6d8d1;
-    }
+  display: flex;
+  align-items: center;
+  &__volumeIcon{
+    color: var(--color-text);
+    margin-right: 0.25rem;
+    cursor: pointer;
+  }
+  input[type=range] {
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0 0 0 #000000;
+    background: #c7d1d5;
+    border-radius: 20px;
+    border: 0 solid #000000;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0 0 1px #000000;
+    border: 0 solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+    background: #8c9da2;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -6px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #c7d1d5;
+  }
+  input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0 0 0 #000000;
+    background: #c7d1d5;
+    border-radius: 20px;
+    border: 0 solid #000000;
+  }
+  input[type=range]::-moz-range-thumb {
+    box-shadow: 0 0 1px #000000;
+    border: 0 solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+    background: #8c9da2;
+    cursor: pointer;
+  }
+  input[type=range]::-ms-track {
+    width: 100%;
+    height: 4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+    background: #c7d1d5;
+    border: 0 solid #000000;
+    border-radius: 40px;
+    box-shadow: 0 0 0 #000000;
+  }
+  input[type=range]::-ms-fill-upper {
+    background: #c7d1d5;
+    border: 0 solid #000000;
+    border-radius: 40px;
+    box-shadow: 0 0 0 #000000;
+  }
+  input[type=range]::-ms-thumb {
+    box-shadow: 0 0 1px #000000;
+    border: 0 solid #000000;
+    height: 16px;
+    width: 16px;
+    border-radius: 12px;
+    background: #8c9da2;
+    cursor: pointer;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+    background: #c7d1d5;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+    background: #c7d1d5;
   }
 }
 
