--- a/src/app/publications/page.module.scss
+++ b/src/app/publications/page.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 0.5rem;
+  overflow: auto;
   &__title {
     font-size: 22px;
     font-weight: bold;
