--- a/src/components/UI/block/Block.module.scss
+++ b/src/components/UI/block/Block.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-background-soft);
-  height: 223px;
+  min-height: 223px;
   border-radius: 0.5rem;
   margin-bottom: 10px;
   overflow: hidden;
