--- a/src/components/album/albumItem/AlbumItem.module.scss
+++ b/src/components/album/albumItem/AlbumItem.module.scss
@@ -16,6 +16,7 @@
     height: 165px;
     overflow: hidden;
     border-radius: 0.5rem;
+    aspect-ratio: 1;
     img{
       width: 100%;
       height: 100%;
