--- a/src/app/settings/page.module.scss
+++ b/src/app/settings/page.module.scss
@@ -4,5 +4,14 @@
   height: 100%;
   &__options{
     padding: 1rem;
+    flex: auto;
+  }
+  &__version{
+    display: flex;
+    justify-content: center;
+    height: 20px;
+    align-items: center;
+    font-size: 12px;
+    color: var(--color-text-soft);
   }
 }
