--- a/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
+++ b/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
@@ -2,7 +2,7 @@
   color: var(--color-text);
   padding-bottom: var(--paddingBottomOnIphone);
   &__top{
-    border-bottom: 1px solid var(--color-background-soft);
+    border-bottom: 1px solid var(--color-border);
     padding: 1rem;
     position: relative;
   }
@@ -24,15 +24,15 @@
       height: 40px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid var(--color-background-soft);
+      border-bottom: 1px solid var(--color-border);
       position: relative;
     }
     &_itemCancel{
-      border-top: 1px solid var(--color-background-soft);
+      border-top: 1px solid var(--color-border);
       height: 40px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid var(--color-background-soft);
+      border-bottom: 1px solid var(--color-border);
       position: relative;
     }
   }
