--- a/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
+++ b/src/components/track/trackOptionsModalContent/TrackOptionsModalContent.module.scss
@@ -6,122 +6,31 @@
     border-bottom: 1px solid var(--color-border);
     padding: 1rem;
     position: relative;
-  }
-  &__darkLayer{
-    position: absolute;
-    top: -1rem;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.32);
-    z-index: 1;
+    &_darkLayer{
+      position: absolute;
+      top: -1rem;
+      left: 0;
+      right: 0;
+      bottom: -1px;
+      background-color: rgba(0, 0, 0, 0.32);
+      z-index: 1;
+    }
   }
   &__optionList{
     padding: 0 0.5rem;
     :last-child{
       border-bottom: none;
     }
-    &_item{
-      height: 40px;
-      display: flex;
-      align-items: center;
-      border-bottom: 1px solid var(--color-border);
-      position: relative;
-    }
-    &_itemCancel{
-      border-top: 1px solid var(--color-border);
-      height: 40px;
-      display: flex;
-      align-items: center;
-      border-bottom: 1px solid var(--color-border);
-      position: relative;
-    }
   }
-  &__darkLayerOptionList{
+  &__darkBottom{
     position: absolute;
-    top: 0;
-    left: -0.5rem;
-    right: -0.5rem;
-    bottom: -3rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: calc(var(--paddingBottomOnIphone) - 1px);
     background-color: rgba(0, 0, 0, 0.32);
     z-index: 1;
   }
 }
 
-.darkPadding{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: calc(var(--paddingBottomOnIphone) - 1px);
-  background-color: rgba(0, 0, 0, 0.32);
-  z-index: 1;
-}
 
-.track {
-  border-radius: 0.3rem;
-  display: flex;
-  height: 50px;
-  align-items: center;
-  color: var(--color-text);
-  gap: 0.5rem;
-  &__img {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 5px;
-    img {
-      border-radius: 5px;
-      object-fit: cover;
-    }
-  }
-  &__info{
-    flex: auto;
-    &__trackName{
-      font-weight: bold;
-    }
-    &__artistName{
-      font-size: 13px;
-      color: var(--color-text-soft);
-    }
-  }
-}
-
-.albumList{
-  padding: 0 1rem 0 1rem;
-  margin-bottom: 0.5rem;
-  overflow-y: auto;
-  height: 140px;
-}
-
-.album {
-  margin-top: 0.5rem;
-  border-radius: 0.3rem;
-  display: flex;
-  height: 50px;
-  align-items: center;
-  color: var(--color-text);
-  gap: 0.5rem;
-  &__img {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 5px;
-    img {
-      border-radius: 5px;
-      object-fit: cover;
-    }
-  }
-  &__info{
-    flex: auto;
-    &__albumName{
-      font-weight: bold;
-    }
-    &__authorName{
-      font-size: 13px;
-      color: var(--color-text-soft);
-    }
-  }
-}
